// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dealService createDealApi should create a new deal and match snapshot 1`] = `
{
  "data": {
    "attributes": {
      "dealName": "Special Offer",
      "endDate": "2024-12-30T08:51:09.111Z",
      "referenceNumber": "12345",
      "reservationsLeft": 5,
      "roomType": "Deluxe",
      "startDate": "2024-12-30T08:51:09.111Z",
      "statusDeal": "Active",
    },
    "id": "1",
  },
}
`;

exports[`dealService deleteDeal should delete a deal by ID and match snapshot 1`] = `
{
  "data": {
    "message": "Deal deleted successfully",
  },
  "message": "Deal deleted successfully",
}
`;

exports[`dealService getDeals should fetch deals with pagination and match snapshot 1`] = `
{
  "deals": [
    {
      "attributes": {
        "dealName": "Deal 1",
        "roomType": "Deluxe",
      },
      "id": "1",
    },
    {
      "attributes": {
        "dealName": "Deal 2",
        "roomType": "Standard",
      },
      "id": "2",
    },
  ],
  "pagination": {
    "page": 1,
    "pageCount": 1,
    "pageSize": 10,
    "total": 2,
  },
}
`;

exports[`dealService updateDeal should update a deal by ID and match snapshot 1`] = `
{
  "data": {
    "data": {
      "attributes": {
        "dealName": "Updated Deal",
        "endDate": "2024-12-30T08:51:09.121Z",
        "referenceNumber": "54321",
        "reservationsLeft": 3,
        "roomType": "Suite",
        "startDate": "2024-12-30T08:51:09.121Z",
        "statusDeal": "Inactive",
      },
      "id": "1",
    },
  },
  "message": "Deal updated successfully",
}
`;

exports[`guestService createGuestApi should create a new guest and match snapshot 1`] = `
{
  "data": {
    "attributes": {
      "checkInDate": "2024-12-25T00:00:00.000Z",
      "guestName": "John Doe",
      "price": 200,
      "registrationNumber": "REG123",
      "roomType": "Deluxe",
      "stay": 3,
      "totalAmount": 600,
    },
    "id": "1",
  },
}
`;

exports[`guestService deleteGuest should delete a guest by ID and match snapshot 1`] = `
{
  "data": {
    "message": "Guest deleted successfully",
  },
  "message": "Guest deleted successfully",
}
`;

exports[`guestService getGuests should fetch guests with pagination and filters and match snapshot 1`] = `
{
  "guests": [
    {
      "attributes": {
        "guestName": "John Doe",
        "stay": 3,
      },
      "id": "1",
    },
    {
      "attributes": {
        "guestName": "Jane Smith",
        "stay": 2,
      },
      "id": "2",
    },
  ],
  "pagination": {
    "page": 1,
    "pageCount": 1,
    "pageSize": 10,
    "total": 2,
  },
}
`;

exports[`guestService updateGuest should update a guest by ID and match snapshot 1`] = `
{
  "data": {
    "data": {
      "attributes": {
        "checkInDate": "2024-12-20T00:00:00.000Z",
        "guestName": "Jane Smith",
        "price": 300,
        "registrationNumber": "REG456",
        "roomType": "Suite",
        "stay": 5,
        "totalAmount": 1500,
      },
      "id": "1",
    },
  },
  "message": "Guest updated successfully",
}
`;
